pivot iptables
# Generated by iptables-save v1.8.7 on Thu Jun 29 00:53:17 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i enp1s0 -s "homeIP" -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -j LOG --log-prefix "iptables input drop: "
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -i lo -o lo -j ACCEPT
-A FORWARD -i enp1s0 -o enp1s0 -p udp -m udp --dport 51820 -j ACCEPT
-A FORWARD -j LOG --log-prefix "iptables forward dropped: "
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m conntrack --ctstate INVALID -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -p udp -m multiport --dports 53,123,67 -j ACCEPT
-A OUTPUT -j LOG --log-prefix "iptables output drop: "
COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i enp1s0 -p udp -m udp --dport 51820 -j DNAT --to-destination "homeIP"
-A POSTROUTING -o enp1s0 -j MASQUERADE
COMMIT
